# Programowanie-w-C

./: CMakeLists.txt
Projekt Finalny/: RPG.cpp
Zadanai5/: Zad1-6.c
Zadania1/: Zad1.c
Zadania2/: Zad3.c
Zadania3/: Zad1.c  Zad2.c
Zadania4/: Zad1.c  Zad2.c
Zadania5/: Zad1-6.c
Zadania6/: Zad1.c  Zad2.c
Zadania7/: Zad1.c
Zadania8/: Zad1.cpp
