cmake_minimum_required(VERSION 3.27)
project(zadania_1 C)

set(CMAKE_C_STANDARD 11)

add_executable(zadania_1
      Zadania1/Zad1.c
      Zadania1/Zad2.c
      Zadania1/Zad3.c
      Zadania1/Zad4.c
      Zadania1/Zad5.c
      Zadania1/Zad6.c
      Zadania2/Zad1.c
      Zadania2/Zad2.c
      Zadania2/Zad3.c
      Zadania2/Zad4.c
      Zadania3/Zad1.c
      Zadania3/Zad2.c
      Zadania4/Zad1.c
      Zadania4/Zad2.c)
